# PythonProject_10_1

./: .flake8  README.md  main.py  pyproject.toml
src/: masks.py  processing.py  widget.py
