[tool.poetry]
name = "pythonproject13-07-25"
version = "0.1.0"
description = ""
authors = ["Vadim <dolinenko2006@ya.ru>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
requests = "^2.32.4"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.16.1"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 119
exclude = '''
/(
    \.venv
  | \.git
  | \.mypy_cache
  | __pycache__
  | build
  | dist
)/
'''


[tool.isort]
line_length = 119


[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = ".venv"